--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://projects.cosmicds.cfa.harvard.edu/vue-ds-template/">
-  <meta property="og:title" content="TEMPO DS">
-  <meta property="og:description" content="TEMPO DS">
-  <meta property="og:site_name" content="TEMPO DS">
+  <meta property="og:title" content="TEMPO Lab">
+  <meta property="og:description" content="TEMPO Lab">
+  <meta property="og:site_name" content="TEMPO Lab">
   <meta property="og:image" content="https://projects.cosmicds.cfa.harvard.edu/vue-ds-template/preview.png">
   <meta property="og:image:secure_url" content="https://projects.cosmicds.cfa.harvard.edu/vue-ds-template/preview.png">
   <meta property="og:image:type" content="image/jpeg">
@@ -35,12 +35,12 @@
   <link rel="apple-touch-icon" sizes="114x114" href="https://projects.cosmicds.cfa.harvard.edu/cds-website/cosmicds-favicon-114.png">
   <link rel="apple-touch-icon" sizes="144x144" href="https://projects.cosmicds.cfa.harvard.edu/cds-website/cosmicds-favicon-144.png">
   <link rel="shortcut icon" href="https://projects.cosmicds.cfa.harvard.edu/cds-website/cosmicds-favicon.ico">
-  <meta name="apple-mobile-web-app-title" content="TEMPO DS">
+  <meta name="apple-mobile-web-app-title" content="TEMPO Lab">
   <link rel="manifest" href="site.webmanifest">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
   <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
   <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />
-  <title>Tempo Lite</title>
+  <title>Tempo Lab</title>
 </head>
 
 <body>
