--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
   <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
   <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />
-  <title>Tempo Lab</title>
+  <title>TEMPO Lab</title>
 </head>
 
 <body>
